--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,30 @@
 name: Setup yt-dlp
+author: AnimMouse
 description: Setup/Install yt-dlp (a youtube-dl fork) for GitHub Actions
 branding:
   icon: play-circle
   color: red
-  
+inputs:
+  with-ffmpeg:
+    description: Install FFmpeg for yt-dlp
+    required: false
+    default: false
+    
 runs:
   using: composite
   steps:
+    - name: Install yt-dlp/FFmpeg-Builds for Linux
+      if: inputs.with-ffmpeg == 'true' && runner.os == 'linux'
+      shell: bash
+      run: |
+        curl -s https://api.github.com/repos/yt-dlp/FFmpeg-Builds/releases/latest \
+        | grep "browser_download_url.*linux64-gpl-*.tar.xz" \
+        | cut -d : -f 2,3 \
+        | tr -d \" \
+        | aria2c -x 16 -o "ffmpeg-yt-dlp-linux64-gpl.tar.xz" $(cat)
+        tar -xf "ffmpeg-yt-dlp-linux64-gpl.tar.xz" --strip-components 2 --no-anchored ffmpeg
+        mv ffmpeg /usr/local/bin/
+        
     - name: Install yt-dlp using pip3
       shell: bash
       run: pip3 install yt-dlp
