--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         ffmpeg: [without-ffmpeg, with-ffmpeg]
-        
+        downloader: [aria2c, native, wget, curl]
     steps:
       - name: Setup yt-dlp using setup-yt-dlp
         uses: AnimMouse/setup-yt-dlp@main
@@ -20,7 +20,7 @@ jobs:
           with-ffmpeg: ${{ matrix.ffmpeg == 'with-ffmpeg' }}
           
       - name: Test yt-dlp installed by setup-yt-dlp
-        run: yt-dlp https://www.youtube.com/watch?v=BaW_jenozKc
+        run: yt-dlp https://www.youtube.com/watch?v=BaW_jenozKc --downloader ${{ matrix.downloader }}
         
       - name: List files
         run: ls
