Go back to actions.yml and update README.md

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Test setup-yt-dlp
 on:
   push:
     paths:
-      - action.yaml
+      - action.yml
       - scripts/**
       - .github/workflows/test.yaml
       
