--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         ffmpeg: [without-ffmpeg, with-ffmpeg]
         version: [latest, "${{ vars.SPECIFIED_VERSION }}"]
+        nightly: [stable, nightly]
         downloader: [aria2c, native]
         exclude:
           - os: macos-latest
@@ -31,6 +32,7 @@ jobs:
         with:
           with-ffmpeg: ${{ matrix.ffmpeg == 'with-ffmpeg' }}
           version: ${{ matrix.version }}
+          nightly: ${{ matrix.nightly == 'nightly' }}
           
       - name: Test yt-dlp-FFmpeg by checking version
         if: matrix.ffmpeg == 'with-ffmpeg'
