fix: Add GitHub token on yt-dlp-youtube-oauth2

--- a/oauth2/action.yaml
+++ b/oauth2/action.yaml
@@ -10,6 +10,9 @@ inputs:
   token_data:
     description: OAuth2 token data encoded in Base64
     default: false
+  token:
+    description: GitHub token to avoid API rate limiting
+    default: ${{ github.token }}
     
 runs:
   using: composite
