style: Use hyphen as separator

--- a/.github/workflows/test-oauth2.yaml
+++ b/.github/workflows/test-oauth2.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup yt-dlp-youtube-oauth2 plugin using setup-yt-dlp/oauth2
         uses: AnimMouse/setup-yt-dlp/oauth2@main
         with:
-          token_data: ${{ secrets.YOUTUBE_OAUTH2_TOKEN_DATA }}
+          token-data: ${{ secrets.YOUTUBE_OAUTH2_TOKEN_DATA }}
           
       - name: Test yt-dlp by downloading a test video
         run: yt-dlp -P yt-dlp-test-video --restrict-filenames --username oauth2 --password '' https://www.youtube.com/watch?v=BaW_jenozKc
