--- a/oauth2/action.yaml
+++ b/oauth2/action.yaml
@@ -7,7 +7,7 @@ inputs:
   version:
     description: yt-dlp-youtube-oauth2 version
     default: latest
-  token_data:
+  token-data:
     description: OAuth2 token data encoded in Base64
     default: false
   token:
@@ -38,4 +38,4 @@ runs:
       shell: bash
       run: $GITHUB_ACTION_PATH/scripts/sign-in/Unix-like.sh
       env:
-        token_data: ${{ inputs.token_data }}
+        token_data: ${{ inputs.token-data }}
