--- a/.github/workflows/test-oauth2.yaml
+++ b/.github/workflows/test-oauth2.yaml
@@ -18,11 +18,16 @@ jobs:
       - name: Setup yt-dlp-youtube-oauth2 plugin using setup-yt-dlp/oauth2
         uses: AnimMouse/setup-yt-dlp/oauth2@main
         with:
-          token-data: ${{ secrets.YOUTUBE_OAUTH2_TOKEN_DATA }}
+          token_data: ${{ secrets.YOUTUBE_OAUTH2_TOKEN_DATA }}
           
       - name: Test yt-dlp by downloading a test video
         run: yt-dlp -P yt-dlp-test-video --restrict-filenames --username oauth2 --password '' https://www.youtube.com/watch?v=BaW_jenozKc
         
+      - name: Update yt-dlp-youtube-oauth2 token using setup-yt-dlp/oauth2/update-token
+        uses: AnimMouse/setup-yt-dlp/oauth2/update-token@main
+        with:
+          token: ${{ secrets.GH_PAT }}
+          
       - name: Upload yt-dlp test video
         uses: actions/upload-artifact@v4
         with:
