--- a/.github/workflows/test-oauth.yaml
+++ b/.github/workflows/test-oauth.yaml
@@ -37,6 +37,6 @@ jobs:
       - name: Upload yt-dlp test video
         uses: actions/upload-artifact@v4
         with:
-          name: yt-dlp test video
+          name: yt-dlp test video ${{ runner.os }}
           path: yt-dlp-test-video
           if-no-files-found: error
