fix: Explicitly pass GitHub token and cookies secret name, and use v3 for yt-dlp FFmpeg

--- a/.github/workflows/test-cookies.yaml
+++ b/.github/workflows/test-cookies.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Update yt-dlp YouTube cookies using setup-yt-dlp/cookies/update
         uses: AnimMouse/setup-yt-dlp/cookies/update@main
         with:
+          cookies_secret_name: YOUTUBE_COOKIES
           token: ${{ secrets.GH_PAT }}
           
       - name: Upload yt-dlp test video
