--- a/action.yml
+++ b/action.yml
@@ -25,8 +25,10 @@ runs:
   steps:
     - name: Install yt-dlp/FFmpeg-Builds
       if: runner.os != 'macOS' && inputs.ffmpeg != 'false'
-      uses: AnimMouse/setup-yt-dlp/ffmpeg@main
-      
+      uses: AnimMouse/setup-yt-dlp/ffmpeg@v3
+      with:
+        token: ${{ inputs.token }}
+        
     - name: Get yt-dlp version for Unix-like
       id: version-unix-like
       if: runner.os == 'Linux' || runner.os == 'macOS'
